--- a/src/Drastic.InAppSettingsKit/Drastic.InAppSettingsKit.csproj
+++ b/src/Drastic.InAppSettingsKit/Drastic.InAppSettingsKit.csproj
@@ -21,9 +21,9 @@
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<DebugType>embedded</DebugType>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
 		<CompressBindingResourcePackage>true</CompressBindingResourcePackage>
-    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+    <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
   </PropertyGroup>
 
   <ItemGroup>
